--- a/module4/casestudy_module_4/furama/src/main/resources/templates/index.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/index.html
@@ -62,8 +62,8 @@
                 <li class="dropdown"><a href="/furama"><span>Home</span></a></li>
                 <li><a class="nav-link scrollto" href="/employee">Employee</a></li>
                 <li><a class="nav-link scrollto" href="/customer">Customer</a></li>
-                <li><a class="nav-link scrollto" href="/service">Service</a></li>
-                <li><a class="nav-link scrollto" href="#">Contract</a></li>
+                <li><a class="nav-link scrollto" href="/facility">Facility</a></li>
+                <li><a class="nav-link scrollto" href="/contract">Contract</a></li>
                 <li><a class="btn-login"  href="#">Login</a></li>
 
                     <!--                <input class="search scrollto" type="text" placeholder="Search"><a class="btn-getstarted scrollto"-->
