--- a/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
@@ -12,41 +12,53 @@
 
         <div class="card w-100">
             <h2>Update Customer</h2>
-            <form action="" method="post">
-                <div class="row">
-                    <input type="text" value="id" hidden>
+            <form th:action="@{/customer/edit}" method="post" th:object="${customer}">
+                <div class="row m-auto">
+                    <input type="text" th:field="*{customerId}" hidden>
                     <div class="col">
                         <div class="form-group">
                             <label>Customer Name</label>
-                            <input type="text">
+                            <input type="text" th:field="*{customerName}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Customer Type</label>
-                            <select>
-                                <option value="">--Select Customer Type--</option>
-                                <option value="1">Diamond</option>
-                                <option value="2">Platinum</option>
-                                <option value="3">Gold</option>
-                                <option value="4">Silver</option>
-                                <option value="5">Member</option>
+                            <select th:field="*{customerType}">
+                                <option th:each="type:${customerTypeList}"
+                                        th:if="${type.customerTypeId==customer.customerType.customerTypeId}"
+                                        th:value="*{customerType.customerTypeId}"
+                                        th:text="*{customerType.customerTypeName}"
+                                        selected>
+                                </option>
+                                <option th:each="type:${customerTypeList}"
+                                        th:if="${type.customerTypeId!=customer.customerType.customerTypeId}"
+                                        th:value="${type.customerTypeId}"
+                                        th:text="${type.customerTypeName}">
+                                </option>
                             </select>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>ID Card</label>
-                            <input type="text">
+                            <input type="text" th:field="*{customerIdCard}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Gender</label>
-                            <select>
-                                <option value="">--Select Gender--</option>
-                                <option value="1">Male</option>
-                                <option value="2">Female</option>
+                            <select th:field="*{gender}">
+                                <th:block th:if="*{gender==0}">
+                                    <option th:value="0" th:text="Female" selected></option>
+                                    <option th:value="1" th:text="Male"></option>
+                                    <option th:value="2" th:text="Other"></option>
+                                </th:block>
+                                <th:block th:if="*{gender==1}">
+                                    <option th:value="0" th:text="Female"></option>
+                                    <option th:value="1" th:text="Male" selected></option>
+                                    <option th:value="2" th:text="Other"></option>
+                                </th:block>
                             </select>
                         </div>
                     </div>
@@ -54,31 +66,33 @@
                     <div class="col">
                         <div class="form-group">
                             <label>Phone Number</label>
-                            <input type="text">
+                            <input type="text" th:field="*{customerPhone}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Date Of Birth</label>
-                            <input type="date">
+                            <input type="date" th:field="*{customerDob}">
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email">
+                            <input type="email" th:field="*{customerEmail}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Address</label>
-                            <input type="text">
+                            <input type="text" th:field="*{customerAddress}">
                         </div>
                     </div>
-                    <div class="col">
-                        <label> </label>
-                        <input type="submit" value="Submit">
+                    <div class="col mt-5 mb-sm-0">
+                        <a class="btn btn-secondary" th:href="@{/customer}" th:text="Cancle"></a>
+                    </div>
+                    <div class="col mt-5 mb-sm-0">
+                        <button class="btn-modal-delete" type="submit">Submit</button>
                     </div>
 
                 </div>
