--- a/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-list.html
@@ -78,6 +78,46 @@
                     <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
                 </td>
             </tr>
+            <tr>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>
+                    <button class="btn-edit" data-bs-toggle="modal" data-bs-target="#modalUpdate">edit</button>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>Item</td>
+                <td>
+                    <button class="btn-edit" data-bs-toggle="modal" data-bs-target="#modalUpdate">edit</button>
+                </td>
+                <td>
+                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                </td>
+            </tr>
             </tbody>
         </table>
 
@@ -114,10 +154,10 @@
                     <div class="modal-body">
                         <form action="" method="post">
 
-                            <table border="none">
+                            <table border="none" class="table-modal-create-container">
                                 <tr>
                                     <td>
-                                        <table border="none">
+                                        <table border="none" class="table-modal-create">
                                             <tr>
                                                 <td><label>Employee Name</label></td>
                                                 <td><input type="text" value="item"></td>
@@ -145,7 +185,7 @@
                                         </table>
                                     </td>
                                     <td>
-                                        <table>
+                                        <table class="table-modal-create">
                                             <tr>
                                                 <td><label>Date Of Birth</label></td>
                                                 <td><input type="date"  value="item"></td>
@@ -223,10 +263,10 @@
                     <div class="modal-body">
                         <form action="" method="post">
 
-                            <table border="none">
+                            <table border="none" class="table-modal-create-container">
                                 <tr>
                                     <td>
-                                        <table border="none">
+                                        <table border="none" class="table-modal-create">
                                             <tr>
                                                 <td><label>Employee Name</label></td>
                                                 <td><input type="text"></td>
@@ -254,7 +294,7 @@
                                         </table>
                                     </td>
                                     <td>
-                                        <table>
+                                        <table class="table-modal-create">
                                             <tr>
                                                 <td><label>Date Of Birth</label></td>
                                                 <td><input type="date"></td>
