--- a/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-create.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-create.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:insert="~{index::head}">
     <meta charset="UTF-8">
-    <title>New Service</title>
+    <title>New Facility</title>
     <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 <body>
@@ -11,13 +11,13 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
 
         <div class="card w-100">
-            <h2>New Service</h2>
+            <h2>New Facility</h2>
             <form action="" method="post">
-                <div class="row">
+                <div class="row m-auto">
 
                     <div class="col">
                         <div class="form-group">
-                            <label>Service Name</label>
+                            <label>Facility Name</label>
                             <input type="text">
                         </div>
                     </div>
@@ -55,9 +55,10 @@
                     </div>
                     <div class="col">
                         <div class="form-group">
-                            <label>Service Type</label>
-                            <select id="service-type" onchange="getInfo()">
-                                <option class="select-items" value="" disabled selected>--Select Service Type--</option>
+                            <label>Facility Type</label>
+                            <select id="facility-type" onchange="getInfo()">
+                                <option class="select-items" value="" disabled selected>--Select Facility Type--
+                                </option>
                                 <option class="select-items" value="1">Villa</option>
                                 <option class="select-items" value="2">House</option>
                                 <option class="select-items" value="3">Room</option>
@@ -91,16 +92,18 @@
                         </div>
                     </div>
 
-                    <div class="col" id="free-service" style="display: none">
+                    <div class="col" id="free-facility" style="display: none">
                         <div class="form-group">
-                            <label>Free Service</label>
+                            <label>Free Facility</label>
                             <input type="text">
                         </div>
                     </div>
 
-                    <div class="col">
-                        <label> </label>
-                        <input type="submit" value="Submit">
+                    <div class="col mt-5 mb-sm-0">
+                        <a class="btn btn-secondary" th:href="@{/facility}" th:text="Cancle"></a>
+                    </div>
+                    <div class="col mt-5 mb-sm-0">
+                        <button class="btn-modal-delete" type="submit">Submit</button>
                     </div>
 
                 </div>
@@ -117,31 +120,31 @@
 </html>
 <script>
     function getInfo() {
-        let temp = $('#service-type').val();
+        let temp = $('#facility-type').val();
 
         if (temp === "") {
             $('#standard-room').hide();
             $('#other-convenience').hide();
             $('#pool-area').hide();
             $('#number-of-floors').hide();
-            $('#free-service').hide();
+            $('#free-facility').hide();
         }
         if (temp === "1") {
             $('#standard-room').show();
             $('#other-convenience').show();
             $('#pool-area').show();
             $('#number-of-floors').show();
-            $('#free-service').hide();
+            $('#free-facility').hide();
         }
         if (temp === "2") {
             $('#standard-room').show();
             $('#other-convenience').show();
             $('#number-of-floors').show();
             $('#pool-area').hide();
-            $('#free-service').hide();
+            $('#free-facility').hide();
         }
         if (temp === "3") {
-            $('#free-service').show();
+            $('#free-facility').show();
             $('#standard-room').hide();
             $('#other-convenience').hide();
             $('#number-of-floors').hide();
