--- a/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/employee/employee-list.html
@@ -159,8 +159,8 @@
                                     <td>
                                         <table border="none" class="table-modal-create">
                                             <tr>
-                                                <td><label>Employee Name</label></td>
-                                                <td><input type="text" value="item"></td>
+                                                <td class="w-25"><label>Employee Name</label></td>
+                                                <td class="w-75" ><input type="text" value="item"></td>
                                             </tr>
                                             <tr>
                                                 <td><label>ID Card</label></td>
@@ -187,14 +187,14 @@
                                     <td>
                                         <table class="table-modal-create">
                                             <tr>
-                                                <td><label>Date Of Birth</label></td>
-                                                <td><input type="date"  value="item"></td>
+                                                <td class="w-25"><label>Date Of Birth</label></td>
+                                                <td class="w-75"><input type="date"  value="item"></td>
                                             </tr>
                                             <tr>
                                                 <td><label>Position</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Position--</option>
+                                                        <option hidden selected>--Select Position--</option>
                                                         <option value="">General Manager</option>
                                                         <option value="">Manager</option>
                                                         <option value="">Employee</option>
@@ -205,7 +205,7 @@
                                                 <td><label>Education Degree</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Education Degree--
+                                                        <option hidden selected>--Select Education Degree--
                                                         </option>
                                                         <option value="">University</option>
                                                         <option value="">College</option>
@@ -217,7 +217,7 @@
                                                 <td><label>Division</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Division--</option>
+                                                        <option hidden selected>--Select Division--</option>
                                                         <option value="">Marketing</option>
                                                         <option value="">Restaurant</option>
                                                         <option value="">Sale</option>
@@ -268,8 +268,8 @@
                                     <td>
                                         <table border="none" class="table-modal-create">
                                             <tr>
-                                                <td><label>Employee Name</label></td>
-                                                <td><input type="text"></td>
+                                                <td class="w-25"><label>Employee Name</label></td>
+                                                <td class="w-75"><input type="text"></td>
                                             </tr>
                                             <tr>
                                                 <td><label>ID Card</label></td>
@@ -296,14 +296,14 @@
                                     <td>
                                         <table class="table-modal-create">
                                             <tr>
-                                                <td><label>Date Of Birth</label></td>
-                                                <td><input type="date"></td>
+                                                <td class="w-25"><label>Date Of Birth</label></td>
+                                                <td class="w-75"><input type="date"></td>
                                             </tr>
                                             <tr>
                                                 <td><label>Position</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Position--</option>
+                                                        <option hidden selected>--Select Position--</option>
                                                         <option value="">General Manager</option>
                                                         <option value="">Manager</option>
                                                         <option value="">Employee</option>
@@ -314,7 +314,7 @@
                                                 <td><label>Education Degree</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Education Degree--
+                                                        <option hidden selected>--Select Education Degree--
                                                         </option>
                                                         <option value="">University</option>
                                                         <option value="">College</option>
@@ -326,7 +326,7 @@
                                                 <td><label>Division</label></td>
                                                 <td>
                                                     <select>
-                                                        <option value="" disabled selected>--Select Division--</option>
+                                                        <option hidden selected>--Select Division--</option>
                                                         <option value="">Marketing</option>
                                                         <option value="">Restaurant</option>
                                                         <option value="">Sale</option>
