--- a/module4/casestudy_module_4/furama/src/main/resources/static/assets/css/custom.css
+++ b/module4/casestudy_module_4/furama/src/main/resources/static/assets/css/custom.css
@@ -40,21 +40,21 @@ th {
 th last {
     border-right: none;
 }
-
-.btn-login {
+.navbar ul li .btn-login {
     border-radius: 10px;
     border: #0ea2bd 2px solid;
-    background-color: #0ea2bd;
+    padding: 3px 10px;
+    height: 40px;
     font-size: 14px;
     color: white;
-    padding: 3px 10px;
     text-decoration: none;
-    height: 40px;
+    background-color: #0ea2bd;
+
 }
 
 .navbar ul li .btn-login:hover {
     text-decoration: none;
-    color: white;
+    color: #664d03;
 }
 
 .btn-create {
@@ -241,17 +241,17 @@ text-align: right;
 /*---------Form create & edit---------*/
 
 session .container .card {
-    width: 100%;
-    padding: 20px 70px 70px 70px;
-    border: 6px solid #0ea2bd;
-    box-shadow: 10px 10px 0 #0ea2bd;
+    width: 75%;
+    padding: 20px 20px 20px 20px;
+    border: 2px solid #0ea2bd;
+    /*box-shadow: 10px 10px 0 #0ea2bd;*/
     border-radius: 50px;
     position: relative;
     background-color: rgba(237, 238, 233, 0.04);
 }
 
 .card h2 {
-    color: rgba(0, 0, 0, 0.3);
+    color: #A686708E;
     font-size: 30px;
     text-transform: uppercase;
     font-weight: bolder;
@@ -259,23 +259,25 @@ session .container .card {
 
 .card .row {
     position: relative;
-    width: 100%;
     display: grid;
     grid: auto / auto auto;
     grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
-    grid-gap: 10px;
+    grid-gap: 20px;
 }
 
 .card .row .col {
     position: relative;
     width: 100%;
-    margin: 20px 10px 30px 0;
+    height: 80px;
     transition: 0.5s;
+}
+.card .row .col .btn {
+margin-top: 20px;
 }
 
 .card .row .form-group {
     position: relative;
-    width: 200px;
+    width: 60%;
     height: 40px;
     color: #4c50ae;
     margin-left: 10px
@@ -284,14 +286,14 @@ session .container .card {
 .card .row .form-group input,
 .card .row .form-group select {
     /*position: absolute;*/
-    width: 200%;
+    width: 150%;
     height: 100%;
     background: transparent;
     outline: none;
     font-size: 14px;
     padding: 5px 10px;
-    border: 5px solid #0ea2bd;
-    box-shadow: 3px 5px 0 #0ea2bd;
+    border: 2px solid #0ea2bd;
+    /*box-shadow: 3px 5px 0 #0ea2bd;*/
     color: #4c50ae;
     border-radius: 50px;
     margin: 10px;
@@ -325,7 +327,6 @@ session .container .card {
 
 .card .row input[type="submit"] {
     position: relative;
-    top: 30px;
     border: 5px solid #0ea2bd;
     /*box-shadow: 10px 10px 0 #0ea2bd;*/
     padding: 10px;
@@ -365,14 +366,14 @@ session .container .card {
 
     .card .row .col input,
     .card .row .col select{
-        width: 200%;
+        width: 150%;
     }
     .card .row .col label{
-        width: 200%;
+        width: 150%;
     }
 
     .card .row input[type="submit"] {
-        width: 100%;
+        width: 50%;
     }
 }
 @media screen and (max-width: 800px) {
