--- a/module4/casestudy_module_4/furama/src/main/resources/templates/contract/contract-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/contract/contract-list.html
@@ -134,11 +134,11 @@
 
         <!--Modal Add Contract Detail-->
 
-        <div class="modal fade modal-create " id="modalAddContractDetail" tabindex="-1"
+        <div class="modal fade modal-create" id="modalAddContractDetail" tabindex="-1"
              aria-labelledby="modalAddContractDetailLabel"
              aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable ">
-                <div class="modal-content">
+            <div class="modal-dialog modal-dialog-scrollable m-auto">
+                <div class="modal-content w-100 ">
                     <div class="modal-header">
                         <h5>New Contract Detail</h5>
                     </div>
@@ -178,8 +178,8 @@
         <div class="modal fade modal-create " id="modalSelectedFreeFacility" tabindex="-1"
              aria-labelledby="modalSelectedFreeFacilityLabel"
              aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable ">
-                <div class="modal-content">
+            <div class="modal-dialog modal-dialog-scrollable m-auto">
+                <div class="modal-content w-100">
                     <div class="modal-header">
                         <h5>Selected Free Facility List</h5>
                     </div>
