--- a/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-edit.html
@@ -59,6 +59,11 @@
                                     <option th:value="1" th:text="Male" selected></option>
                                     <option th:value="2" th:text="Other"></option>
                                 </th:block>
+                                <th:block th:if="*{gender==2}">
+                                    <option th:value="0" th:text="Female"></option>
+                                    <option th:value="1" th:text="Male"></option>
+                                    <option th:value="2" th:text="Other" selected></option>
+                                </th:block>
                             </select>
                         </div>
                     </div>
@@ -88,11 +93,11 @@
                             <input type="text" th:field="*{customerAddress}">
                         </div>
                     </div>
-                    <div class="col mt-5 mb-sm-0">
-                        <a class="btn btn-secondary" th:href="@{/customer}" th:text="Cancle"></a>
+                    <div class="col">
+                        <a class="btn btn-secondary" th:href="@{/customer}" th:text="Cancel"></a>
                     </div>
-                    <div class="col mt-5 mb-sm-0">
-                        <button class="btn-modal-delete" type="submit">Submit</button>
+                    <div class="col">
+                        <button class="btn btn-modal-delete" type="submit">Submit</button>
                     </div>
 
                 </div>
