--- a/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/customer/customer-list.html
@@ -25,7 +25,10 @@
         <div style="margin-top: 20px" th:if="${msgDelete}">
             <small th:utext="${msgDelete}" style="color: red;"></small>
         </div>
-        <table style="width: 100%">
+        <div  style="margin-top: 50px">
+        <p style="font-style: italic" th:if="${msgNotFound}" th:utext="${msgNotFound}"></p>
+        </div>
+        <table style="width: 100%" th:if="${customerList}" >
             <thead>
             <tr>
                 <th>No.</th>
@@ -93,18 +96,18 @@
             </tbody>
         </table>
 
-        <div class="row align-self-xl-end small">
+        <div class="row align-self-xl-end small" th:if="${customerList}">
             <div class="col-12">
                 <a th:if="${customerList.hasPrevious()}"
                    th:href="@{customer(page=${customerList.number - 1}, search=${keyword})}">
-                    Previous
+                    <i class="bi bi-caret-left-fill"></i>
                 </a>
                 <span th:text="${customerList.number + 1}"></span>
                 /
                 <span th:text="${customerList.totalPages}"></span>
                 <a th:if="${customerList.hasNext()}"
                    th:href="@{customer(page=${customerList.number + 1}, search=${keyword})}">
-                    Next
+                    <i class="bi bi-caret-right-fill"></i>
                 </a>
             </div>
         </div>
