--- a/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-create.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-create.html
@@ -10,58 +10,53 @@
 <session class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
 
-        <div class="card w-100">
+        <div class="card">
             <h2>New Facility</h2>
-            <form action="" method="post">
+            <form th:action="@{/facility/create}" method="post" th:object="${facility}">
                 <div class="row m-auto">
-
                     <div class="col">
                         <div class="form-group">
                             <label>Facility Name</label>
-                            <input type="text">
+                            <input type="text" th:field="*{facilityName}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Area</label>
-                            <input type="text">
+                            <input type="text" th:field="*{area}">
                         </div>
                     </div>
-
                     <div class="col">
                         <div class="form-group">
                             <label>Cost (VND)</label>
-                            <input type="text">
+                            <input type="text" th:field="*{cost}">
                         </div>
                     </div>
-
                     <div class="col">
                         <div class="form-group">
                             <label>Max People</label>
-                            <input type="number">
+                            <input type="number" th:field="*{maxPeople}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Rent Type</label>
-                            <select>
-                                <option value="" disabled selected>--Select Rent Type--</option>
-                                <option value="">Year</option>
-                                <option value="">Month</option>
-                                <option value="">Day</option>
-                                <option value="">Hour</option>
+                            <select th:field="*{rentType}">
+                                <option value="" hidden selected>--Select Rent Type--</option>
+                                <option th:each="type:${rentTypeList}" th:value="${type.rentTypeId}"
+                                        th:text="${type.rentTypeName}"></option>
                             </select>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Facility Type</label>
-                            <select id="facility-type" onchange="getInfo()">
-                                <option class="select-items" value="" disabled selected>--Select Facility Type--
+                            <select id="facility-type" th:field="*{facilityType}" onchange="getInfo()">
+                                <option class="select-items" th:value="-1" hidden selected>--Select Facility Type--
                                 </option>
-                                <option class="select-items" value="1">Villa</option>
-                                <option class="select-items" value="2">House</option>
-                                <option class="select-items" value="3">Room</option>
+                                <option class="select-items" th:each="type:${facilityTypeList}"
+                                        th:value="${type.facilityTypeId}" th:text="${type.facilityTypeName}">Villa
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -69,41 +64,41 @@
                     <div class="col" id="standard-room" style="display: none">
                         <div class="form-group">
                             <label>Standard Room</label>
-                            <input type="text">
+                            <input type="text" th:field="*{standardRoom}">
                         </div>
                     </div>
 
                     <div class="col" id="other-convenience" style="display: none">
                         <div class="form-group">
                             <label>Other Convenience</label>
-                            <input type="text">
+                            <input type="text" th:field="*{otherConvenience}">
                         </div>
                     </div>
                     <div class="col" id="pool-area" style="display: none">
                         <div class="form-group">
                             <label>Pool Area</label>
-                            <input type="text">
+                            <input type="text" th:field="*{poolArea}">
                         </div>
                     </div>
                     <div class="col" id="number-of-floors" style="display: none">
                         <div class="form-group">
                             <label>Number of Floors</label>
-                            <input type="number">
+                            <input type="number" th:field="*{numberOfFloors}">
                         </div>
                     </div>
-
                     <div class="col" id="free-facility" style="display: none">
                         <div class="form-group">
                             <label>Free Facility</label>
-                            <input type="text">
+                            <textarea th:field="*{freeFacility}">
+                            </textarea>
                         </div>
                     </div>
 
-                    <div class="col mt-5 mb-sm-0">
-                        <a class="btn btn-secondary" th:href="@{/facility}" th:text="Cancle"></a>
+                    <div class="col">
+                        <a class="btn btn-secondary" th:href="@{/facility}" th:text="Cancel"></a>
                     </div>
-                    <div class="col mt-5 mb-sm-0">
-                        <button class="btn-modal-delete" type="submit">Submit</button>
+                    <div class="col">
+                        <button class="btn btn-modal-delete" type="submit">Submit</button>
                     </div>
 
                 </div>
@@ -122,28 +117,28 @@
     function getInfo() {
         let temp = $('#facility-type').val();
 
-        if (temp === "") {
+        if (temp == "-1") {
             $('#standard-room').hide();
             $('#other-convenience').hide();
             $('#pool-area').hide();
             $('#number-of-floors').hide();
             $('#free-facility').hide();
         }
-        if (temp === "1") {
+        if (temp == "1") {
             $('#standard-room').show();
             $('#other-convenience').show();
             $('#pool-area').show();
             $('#number-of-floors').show();
             $('#free-facility').hide();
         }
-        if (temp === "2") {
+        if (temp == "2") {
             $('#standard-room').show();
             $('#other-convenience').show();
             $('#number-of-floors').show();
             $('#pool-area').hide();
             $('#free-facility').hide();
         }
-        if (temp === "3") {
+        if (temp == "3") {
             $('#free-facility').show();
             $('#standard-room').hide();
             $('#other-convenience').hide();
