--- a/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-edit.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-edit.html
@@ -12,89 +12,94 @@
 
         <div class="card w-100">
             <h2>Update Facility</h2>
-            <form action="" method="post">
+            <form th:action="@{/facility/edit}" method="post" th:object="${facility}">
                 <div class="row m-auto">
-
+                    <input type="text" th:field="*{facilityId}" hidden>
                     <div class="col">
                         <div class="form-group">
                             <label>Facility Name</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{facilityName}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Area</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{area}">
                         </div>
                     </div>
-
                     <div class="col">
                         <div class="form-group">
                             <label>Cost (VND)</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{cost}">
                         </div>
                     </div>
-
                     <div class="col">
                         <div class="form-group">
                             <label>Max People</label>
-                            <input type="number" value="">
+                            <input type="number" th:field="*{maxPeople}">
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Rent Type</label>
-                            <select>
-                                <option value="" disabled selected>--Select Rent Type--</option>
-                                <option value="">Year</option>
-                                <option value="">Month</option>
-                                <option value="">Day</option>
-                                <option value="">Hour</option>
-                            </select>
+                            <select th:field="*{rentType}">
+                                <optgroup title="--Select Rent Type--"></optgroup>
+                                <option th:each="temp:${rentTypeList}"
+                                        th:if="${facility.rentType.rentTypeId == temp.rentTypeId}"
+                                        th:value="${temp.rentTypeId}" th:text="${temp.rentTypeName}" selected>
+                                </option>
+                                <option th:each="temp:${rentTypeList}"
+                                        th:if="${facility.rentType.rentTypeId != temp.rentTypeId}"
+                                        th:value="${temp.rentTypeId}" th:text="${temp.rentTypeName}">
+                                </option>
+                                </select>
                         </div>
                     </div>
                     <div class="col">
                         <div class="form-group">
                             <label>Facility Type</label>
-                            <select id="facility-type" onchange="getInfo()">
-                                <option class="select-items" value="" disabled selected>--Select Facility Type--</option>
-                                <option class="select-items" value="1">Villa</option>
-                                <option class="select-items" value="2">House</option>
-                                <option class="select-items" value="3">Room</option>
+                            <select id="facility-type" onchange="getInfo()" th:field="*{facilityType}" >
+                                <optgroup title="--Select Facility Type--"></optgroup>
+                                <option th:each="temp:${facilityTypeList}"
+                                        th:if="${facility.facilityType.facilityTypeId == temp.facilityTypeId}"
+                                        th:value="${temp.facilityTypeId}" th:text="${temp.facilityTypeName}" selected>
+                                </option>
+                                <option th:each="temp:${facilityTypeList}"
+                                        th:if="${facility.facilityType.facilityTypeId != temp.facilityTypeId}"
+                                        th:value="${temp.facilityTypeId}" th:text="${temp.facilityTypeName}">
+                                </option>
                             </select>
                         </div>
                     </div>
-
                     <div class="col" id="standard-room" style="display: none">
                         <div class="form-group">
                             <label>Standard Room</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{standardRoom}">
                         </div>
                     </div>
 
                     <div class="col" id="other-convenience" style="display: none">
                         <div class="form-group">
                             <label>Other Convenience</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{otherConvenience}">
                         </div>
                     </div>
                     <div class="col" id="pool-area" style="display: none">
                         <div class="form-group">
                             <label>Pool Area</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{poolArea}">
                         </div>
                     </div>
                     <div class="col" id="number-of-floors" style="display: none">
                         <div class="form-group">
                             <label>Number of Floors</label>
-                            <input type="number" value="item">
+                            <input type="number" th:field="*{numberOfFloors}">
                         </div>
                     </div>
-
                     <div class="col" id="free-facility" style="display: none">
                         <div class="form-group">
                             <label>Free Facility</label>
-                            <input type="text" value="item">
+                            <input type="text" th:field="*{freeFacility}">
                         </div>
                     </div>
 
