--- a/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-list.html
+++ b/module4/casestudy_module_4/furama/src/main/resources/templates/facility/facility-list.html
@@ -11,11 +11,13 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
         <h3>Facility List</h3>
         <div class="d-inline-flex">
-            <a th:href="@{/facility/create}"><button class="btn-create">New Facility</button></a>
-        <form action="" method="post">
-            <input class="input-search" type="text" placeholder="Search">
-            <button class="btn-create scrollto" href="#">Search</button>
-        </form>
+            <a th:href="@{/facility/create}">
+                <button class="btn-create">New Facility</button>
+            </a>
+            <form th:action="@{/facility}" method="post">
+                <input class="input-search" type="text" placeholder="Search">
+                <button class="btn-create scrollto">Search</button>
+            </form>
         </div>
         <table style="width: 100%">
             <thead>
@@ -26,7 +28,7 @@
                 <th>Cost</th>
                 <th>Max People</th>
                 <th>Rent Type</th>
-                <th>Service Type</th>
+                <th>Facility Type</th>
                 <th>Standard Room</th>
                 <th>Other Convenience</th>
                 <th>Pool Area</th>
@@ -36,108 +38,59 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
+            <tr th:each="facility,loop:${facilityList}">
+                <td th:text="${loop.count}"></td>
+                <td th:text="${facility.facilityName}"></td>
+                <td th:text="${facility.area}"></td>
+                <td th:text="${facility.cost}"></td>
+                <td th:text="${facility.maxPeople}"></td>
+                <td th:text="${facility.rentType.rentTypeName}"></td>
+                <td th:text="${facility.facilityType.facilityTypeName}"></td>
+                <td th:text="${facility.standardRoom}"></td>
+                <td th:text="${facility.otherConvenience}"></td>
+                <td th:text="${facility.poolArea}"></td>
+                <td th:text="${facility.numberOfFloors}"></td>
+                <td th:text="${facility.freeFacility}"></td>
                 <td>
-                    <a th:href="@{/facility/edit}"><button class="btn-edit">edit</button></a>
+                    <a th:href="@{/facility/edit/{id}(id=${facility.facilityId})}">
+                        <button class="btn-edit">edit</button>
+                    </a>
                 </td>
                 <td>
-                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
+                    <button class="btn-delete" data-bs-toggle="modal"
+                            th:data-bs-target="'#exampleModal'+${facility.facilityId}">delete
+                    </button>
                 </td>
-            </tr>
-            <tr>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>
-                    <a th:href="@{/facility/edit}"><button class="btn-edit">edit</button></a>
-                </td>
-                <td>
-                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>
-                    <a th:href="@{/facility/edit}"><button class="btn-edit">edit</button></a>
-                </td>
-                <td>
-                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>Item</td>
-                <td>
-                    <a th:href="@{/facility/edit}"><button class="btn-edit">edit</button></a>
-                </td>
-                <td>
-                    <button class="btn-delete" data-bs-toggle="modal" data-bs-target="#exampleModal">delete</button>
-                </td>
+
+
+                <!-- Modal -->
+                <div class="modal fade" th:id="'exampleModal'+${facility.facilityId}" tabindex="-1"
+                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure to delete the facility
+                                <strong style="color: #bb2d3b" th:text="${facility.facilityName}">"</strong>
+                                ?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn-modal-delete">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </tr>
             </tbody>
         </table>
 
 
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        Are you sure to delete the facility with ID = <strong style="color: #bb2d3b">...</strong> ?
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn-modal-delete">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </session>
 <footer th:replace="~{index::footer}"></footer>
